--- a/a1/doc/report.tex
+++ b/a1/doc/report.tex
@@ -2,35 +2,20 @@
 
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
-\usepackage{titlesec}
 \usepackage{graphicx}
 \usepackage{mathtools}
 \usepackage{amsthm}
 \usepackage{amsfonts}
-\usepackage[top=1.0in,bottom=1.0in]{geometry}
 \usepackage{hyperref}
 \usepackage[singlelinecheck=false]{caption}
 \usepackage[backend=biber,url=true,doi=true,eprint=false,style=alphabetic]{biblatex}
 \usepackage{enumitem}
-\usepackage[x11names, rgb]{xcolor}
-\usepackage{tikz}
 \usepackage[justification=centering]{caption}
 \usepackage{indentfirst}
-\usepackage{bookmark}
-\usepackage{minted}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 
-\usetikzlibrary{snakes,arrows,shapes}
-
 \addbibresource{references.bib}
-
-\newcommand\blfootnote[1]{%
-  \begingroup
-  \renewcommand\thefootnote{}\footnote{#1}%
-  \addtocounter{footnote}{-1}%
-  \endgroup
-}
 
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator*{\argmax}{arg\,max}
@@ -40,21 +25,13 @@
 \algrenewcommand\algorithmicrequire{\textbf{Input}}
 \algrenewcommand\algorithmicensure{\textbf{Output}}
 
-\titleformat{\section}
-  {\normalfont\scshape\bfseries}{\thesection}{1em}{}
-\titleformat{\subsection}
-  {\normalfont\scshape\bfseries}{\thesubsection}{1em}{}
-\titleformat{\paragraph}
-  {\normalfont}{\theparagraph}{1em}{}
-\titleformat{\subparagraph}
-  {\normalfont}{\thesubparagraph}{1em}{}
-
 \captionsetup[table]{labelsep=space}
 
 \theoremstyle{plain}
 
 \newtheorem*{definition}{Definition}
 \newtheorem*{theorem}{Theorem}
+\newtheorem*{proposition}{Proposition}
 
 \newcommand{\set}[1]{\mathcal{#1}}
 \newcommand{\pr}{\mathbb{P}}
@@ -67,16 +44,17 @@
 
 \begin{document}
 
-\maketitle
-
 \begin{abstract}
   In this document we present the fundamentals of probabilistic models. We show the origins of
   reasoning through generalized propositional logic and the reasons as to why probabilities have
   shown themselves so sucessful in representing uncertainty. We then introduce probability calculus
-  and how to perform query by enumeration of values. Important concepts of probability, such as
-  belief updating, independence, random variables and conditional probability are formally
+  and how to perform simple queries by enumeration of values. Important concepts of probability,
+  such as belief updating, independence, random variables and conditional probability are formally
   presented.
+  \vspace*{-2.5em}
 \end{abstract}
+
+\maketitle
 
 \section{Reasoning and Uncertainty in Artificial Intelligence}
 
@@ -102,6 +80,57 @@ we are familiarized with the difficulties logic presents to uncertainty we intro
 of probability theory and how to compute simple queries.
 
 \section{Propositional Logic}
+
+Be it through probabilities to represent degrees of belief or through Boolean values to represent
+truths of events, one needs to define a language to describe knowledge formally. When it comes to
+representing truths, an appropriate language is propositional logic. The atomic element in
+propositional logic is the variable. A variable $X$ takes values in a domain $\Omega$. Such value
+assignment is represented as the sentence $X=x$, for $x\in \Omega$. A sentence is defined as
+follows.
+
+\begin{itemize}
+  \item A variable $X$ is a sentence.
+  \item If $\alpha$ and $\beta$ are sentences, then $\alpha \wedge \beta$, $\alpha \vee \beta$ and
+    $\neg \alpha$ are sentences.
+\end{itemize}
+
+The sentence $\alpha \wedge \beta$ represents disjunction, $\alpha \vee \beta$ is called
+conjunction and $\neg \alpha$ negation. The symbols $\wedge$, $\vee$ and $\neg$ are called logical
+connectives and are the main constructs of propositional logic. Valuations to a variable $X$ to a
+value $x\in \Omega$ are described via a function $\nu$. We say that $\nu \models \phi$ if $\nu$
+satisfies the sentence $\phi$. That is, the valuation of $\phi$ belongs to the domain $\Omega$ that
+$\nu$ maps. If $\nu$ does not satisfy $\phi$, we say that $\nu \not\models \phi$. This means $\phi$
+is not in the domain and therefore $\nu \models \neg \phi$. For conjunction, we say that $\nu
+\models \phi \vee \psi \iff \nu \models \phi$ or $\nu \models \psi$. Similarly, $\nu \models \phi
+\wedge \psi \iff \nu \models \phi$ and $\nu \models \psi$. By guaranteeing that negation,
+conjunction and disjunction obey these rules, one defines a field of sets. A field of sets is a
+pair $(\Omega,\mathcal{F})$ where $\Omega$ is the set of valuations and $\mathcal{F}$ is the set
+of possible outcomes closed under negation, union (i.e.\ conjunction) and intersection (i.e.\
+disjunction).
+
+\begin{proposition} (Exercise 7)\\
+  Let $\Omega$ be the set of all valuations and $\mathcal{F}$ be the set of events.
+  \begin{equation*}
+    \alpha \coloneqq \{\nu \in \Omega : \nu \models \phi\}\text{, when $\phi$ is a sentence.}
+  \end{equation*}
+  Then $(\Omega,\mathcal{F})$ is a field of sets.
+\end{proposition}
+
+\begin{proof}
+  To prove $(\Omega,\mathcal{F})$ is a field of sets we must show that $\mathcal{F}$ is a non-empty
+  set closed under union, intersection and complement. Let $\phi,\psi \in \Omega$, $\nu \models
+  (\phi \vee \psi) \iff \nu \models \phi$ or $\nu \models \psi$. But from our earlier assumption,
+  $\phi,\psi \in \Omega$; therefore $\mathcal{F}$ is closed under union. Similarly, $\nu \models
+  (\phi \wedge \psi) \iff \nu \models \phi$ and $\nu \models \psi$. Since both sentences $\phi,\psi
+  \in \Omega$ then $\mathcal{F}$ is closed under intersection. Finally, for an arbitrary $\phi$,
+  $\nu \models \neg \phi \iff \nu \not\models \phi$. Assume $\phi \in \Omega$. Then $\phi$
+  satisfies in $\Omega$ and therefore $\neg\phi$ does not satisfy lest we create a contradiction.
+  Thus, by the definition of satisfiabilitiy $\nu \models \neg\phi$. Now consider $\nu \not\models
+  \neg\phi$, then $\nu \models \neg(\neg\phi)$ and so $\neg\phi$ is in $\Omega$. Therefore,
+  $\mathcal{F}$ is closed under complements.
+\end{proof}
+
+\section{Probability Calculus}
 
 
 
